# Movie-Recommendation-APP

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Project Flow.txt  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py
config/: paths_config.py
notebooks/: Eval_Rec_Model.ipynb  Recommendations_with_rankfm.ipynb  mongodb_datacreation.ipynb
pipeline/: training_pipeline.py
src/: data_ingestion.py  data_processing.py  logger.py  model_training.py  rankfm_model_training.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: project_data.py
static/css/: style.css
static/js/: script.js
templates/: index.html
